# starfarer

./: .gitignore  Cargo.toml  build.rs  readme.md  updates.md
astroph/: Cargo.toml
astroph/src/: lib.rs  tests.rs
astroph/src/galaxy/: mod.rs
astroph/src/sky/: mod.rs
lepton/: Cargo.toml  readme.md
lepton/src/: control.rs  fps_limiter.rs  lib.rs  model.rs  pattern.rs  tools.rs
lepton/src/backend/: fps_limiter.rs  mod.rs  receiver.rs  renderer.rs
lepton/src/graphics/: debug.rs  mod.rs  pattern.rs  platforms.rs  primitives.rs  tools.rs
lepton/src/input/: input_types.rs  mod.rs
lepton/src/macros/: font.rs  mod.rs  model.rs
lepton/src/model/: mod.rs  primitives.rs  vertex.rs
lepton/src/physics/: mod.rs  object.rs  rigid_body.rs
lepton/src/physics/collider/: mod.rs  primitives.rs
lepton/src/physics/collisions/: mod.rs
lepton/src/shader/: 26-shader-depth.vert  camera.rs  input.rs  lights.rs  mod.rs  object.rs  primitives.rs  tex.frag  tex.vert  vertex.rs
lepton/src/shader/builtin/: camera.rs  lights.rs  lp.frag  lp.vert  mod.rs  tex.frag  tex.vert  ui.frag  ui.vert
lepton/src/ui/: element.rs  font.rs  mod.rs
lepton/src/vk_core/: constants.rs  mod.rs  window.rs
lepton/src/vk_core/share/: mod.rs
math/: refuelling-station-elevator.nb
src/: main.rs  menus.rs  ships.rs  skybox.rs  test.rs  updates.md
src/assets/cube/: cube.blend1  cube.mtl
src/astro/: mod.rs  skybox.rs
src/astro/math/: orbit.rs
src/astro/planet/: mod.rs  primitives.rs  square.rs  triangulation.rs
src/astro/system/: mod.rs
src/graphics/: mod.rs
src/graphics/models/: mod.rs
src/graphics/shaders/: fragment.hlsl  mod.rs  vertex.hlsl
src/graphics/shaders/object/: fragment.hlsl  vertex.hlsl
src/planet/: mod.rs  primitives.rs  square.rs  triangulation.rs
src/shaders/: skybox.frag  skybox.vert
src/ships/: bytecode.rs  loader.rs  mod.rs  part.rs  primitives.rs  tests.rs
src/terrain/: mod.rs  triangle.rs  triangulation.rs
src/threadpool/: mod.rs
src/util/settings/: mod.rs
src/utility/: constants.rs  debug.rs  mod.rs  platforms.rs  window.rs
src/utility/share/: mod.rs  v1.rs  v2.rs
starfarer-macros/: Cargo.toml
starfarer-macros/src/: common.rs  lib.rs  tools.rs
tests/: rcs.py
utility/share/: v1.rs
