[package]
name = "starfarer"
version = "0.1.0"
edition = "2021"
authors = ["jtdinsmo <jtdinsmo@mit.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lepton",
    "starfarer-macros",
    "astroph",
]

[dependencies]
lepton = { path = "lepton" }
starfarer-macros = { path = "starfarer-macros" }
cgmath = "0.18.0"
vk-shader-macros = "0.2.8"
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
noise = "0.7.0"
rustc-hash = "1.1.0"
statrs = "0.16.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[build-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
cgmath = "0.18.0"
