[package]
name = "lepton"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", features = ["linked"]}
winit = "0.26.1"
num = "0.4.0"
cgmath = "0.18.0"
image = "0.24.2"
memoffset = "0.6.5"
tobj = "3.2.2"
vk-shader-macros = "0.2.8"
anyhow = "1.0.57"
lambert-bate = "0.1.0"
fontdue = "0.7.2"


[dependencies.bitflags]
version = ">= 1.0.4"


[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }