[package]
name = "starfarer-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.20"
syn = "1.0.98"
anyhow = "1.0.57"
tobj = "3.2.2"
fontdue = "0.7.2"
image = "0.24.2"

[lib]
proc-macro = true